# parallel

./: .gitignore  AGENTS.md  Cargo.toml  ERROR_HANDLING_LOGGING.md  README.md  makefile  opencode.json
crates/common/: AGENT.md  Cargo.toml
crates/common/src/: alert.rs  instructions.rs  lib.rs  project.rs  requests.rs  task.rs  worker.rs
crates/domain/: Cargo.toml
crates/domain/src/: dto.rs  instructions.rs  lib.rs  project.rs  requests.rs  task.rs
crates/message-broker/: AGENT.md  Cargo.toml
crates/message-broker/src/: broker.rs  client.rs  connection.rs  lib.rs  server.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: instructions.rs  lib.rs  requests.rs  task.rs  worker.rs
crates/server/: AGENT.md  Cargo.toml
crates/server/migrations/2024-03-05-000001_create_tasks/: up.sql
crates/server/migrations/2024-03-05-000002_create_workers/: down.sql  up.sql
crates/server/migrations/2024-03-11-000003_create_projects/: up.sql
crates/server/migrations/2024-03-12-000004_add_parent_project/: down.sql  up.sql
crates/server/migrations/2026-03-11-113511-0000_initial_schema/: down.sql  up.sql
crates/server/src/: api_error.rs  error_codes.rs  errors.rs  lib.rs  middleware.rs  state.rs
crates/server/src/common/types/: task.rs
crates/server/src/controller/: alert.rs  health.rs  mod.rs  project.rs  task.rs  worker.rs
crates/server/src/cron/: heartbeat_monitor.rs  mod.rs  orphan_monitor.rs  task_scheduler.rs
crates/server/src/db/: connection.rs  entity.rs  mod.rs  schema.rs
crates/server/src/db/entity/: projects.rs  tasks.rs  workers.rs
crates/server/src/db/migration/: m20240305_000001_create_tasks.rs  m20240305_000002_create_workers.rs  m20240306_000003_update_workers_for_instructions.rs  m20240306_000004_add_review_data_to_tasks.rs  m20240307_000005_add_ssh_key_to_tasks.rs  m20240308_000006_add_max_execution_time_to_tasks.rs  m20240309_000007_add_title_to_tasks.rs  m20240310_000008_add_token_to_workers.rs  m20240311_000009_create_projects.rs  m20240311_000010_add_project_id_to_tasks.rs  m20240312_000011_add_required_labels_to_tasks.rs  mod.rs
crates/server/src/handlers/: mod.rs  project.rs  task.rs  worker.rs
crates/server/src/repository/: mod.rs  project_repository.rs  task_repository.rs  worker_repository.rs
crates/server/src/service/: AGENT.md  alert_service.rs  coordinator.rs  event_processor.rs  heartbeat_monitor.rs  heartbeat_monitor_test.rs  mod.rs  orphan_monitor.rs  orphan_monitor_test.rs  project_service.rs  task_service.rs  test_utils.rs  worker_event_service.rs  worker_service.rs
crates/server/src/services/: coordinator.rs  event_processor.rs  heartbeat_monitor.rs  heartbeat_monitor_test.rs  mod.rs  orphan_monitor.rs  orphan_monitor_test.rs  project_service.rs  task_scheduler.rs  task_service.rs  test_utils.rs  traits.rs  worker_service.rs
crates/worker/: AGENT.md  Cargo.toml
crates/worker/src/: acp_client.rs  agent_runner.rs  api_client.rs  config.rs  lib.rs  repo_ops.rs  repo_pool.rs  task.rs  task_runner.rs  utils.rs  worker.rs
crates/worker/src/actors/: executor.rs  manager.rs  mod.rs  repo_pool.rs
crates/worker/src/code/: acp_client.rs  mod.rs  task_runner.rs
crates/worker/src/conn/: mod.rs
crates/worker/src/repo/: mod.rs  repo_ops.rs  repo_pool.rs
crates/worker/src/test/: mocked_acp_client.rs  mod.rs
parallel-web/: AGENTS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
parallel-web/src/: App.module.css  App.tsx  index.css  main.tsx
parallel-web/src/api/: client.ts  index.ts  projects.ts  tasks.ts  workers.ts
parallel-web/src/components/: TaskQueueView.tsx
parallel-web/src/components/Alerts/: AlertProvider.tsx  index.ts
parallel-web/src/components/Layout/: AppHeader.module.css  AppHeader.tsx  ProjectLayout.module.css  ProjectLayout.tsx  ProjectLayoutContext.ts  ProjectSidebar.tsx  ProjectTree.tsx  Sidebar.module.css  (+2 more)
parallel-web/src/contexts/: AlertContext.tsx
parallel-web/src/hooks/: useQueueSearchParams.ts
parallel-web/src/pages/: AgentsPage.module.css  AgentsPage.tsx  ProjectDetail.module.css  ProjectDetail.tsx  ProjectPage.module.css  ProjectPage.tsx  QueuePage.module.css  QueuePage.tsx  SettingsPage.css  SettingsPage.tsx  index.ts
parallel-web/src/services/: alertService.ts  audioAlerts.ts
parallel-web/src/store/: index.ts
parallel-web/src/stores/: useTasksStore.ts
parallel-web/src/types/: AgentMessage.ts  Alert.ts  AlertPayload.ts  AlertSeverity.ts  CreateProjectRequest.ts  CreateProjectResponse.ts  CreateTaskRequest.ts  CreateTaskResponse.ts  FeedbackType.ts  HumanFeedback.ts  IterationStatus.ts  ListProjectsQuery.ts  ListTasksQuery.ts  MessageType.ts  PollRequest.ts  PollResponse.ts  Project.ts  ProjectListResponse.ts  PushEventsRequest.ts  PushEventsResponse.ts  RegisterWorkerRequest.ts  RepoConfig.ts  ResourceMonitor.ts  RetryTaskRequest.ts  RetryTaskResponse.ts  ReviewData.ts  SshKeyConfig.ts  SubmitFeedbackRequest.ts  Task.ts  TaskAssignment.ts  TaskListResponse.ts  TaskPriority.ts  TaskSort.ts  TaskStatus.ts  UpdateProjectRequest.ts  UpdateTaskStatusRequest.ts  WorkerCapabilities.ts  WorkerEvent.ts  WorkerInfo.ts  WorkerInstruction.ts  (+3 more)
scripts/: test_phase1.sh
src/: lib.rs  main.rs
src/protocol/: messages.rs  mod.rs  session.rs  task.rs  worker.rs
src/server/: mod.rs  server.rs  state.rs
src/server/db/: entity.rs  mod.rs
src/server/handlers/: mod.rs  session.rs  task.rs  worker.rs
src/server/queue/: scheduler.rs
src/server/websocket/: human_conn.rs  mod.rs  server.rs  state.rs  worker_conn.rs
src/worker/: acp_client.rs  api_client.rs  executor.rs  git.rs  mod.rs  server_client.rs  streaming.rs  task.rs  task_client.rs  worker.rs
tests/: integration_test.rs
tests/common/: mod.rs
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: AgentOutput.tsx  AlertNotification.tsx  CreateTaskForm.tsx  HumanInteraction.tsx  TaskList.tsx  TaskProgress.tsx
web/src/contexts/: AlertContext.tsx
web/src/hooks/: useWebSocket.ts
web/src/lib/: api.ts  sshKey.ts
web/src/types/: alert.ts  task.ts
(+22 files in other folders)
