[package]
name = "parallel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
parallel-protocol = { path = "crates/protocol" }
parallel-server = { path = "crates/server" }
parallel-worker = { path = "crates/worker" }

tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
once_cell = "1.19"

[workspace]
members = [
    "crates/protocol",
    "crates/server",
    "crates/worker",
    ".",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

parallel-protocol = { path = "crates/protocol" }

axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "1"

agent-client-protocol = "0.9.5"
reqwest = { version = "0.12", features = ["json"] }
which = "8.0.0"
hostname = "0.4"
nix = { version = "0.29", features = ["signal", "process"] }
