[package]
name = "parallel-message-broker"
version.workspace = true
edition.workspace = true

[dependencies]
parallel-protocol.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
