[package]
name = "parallel-server"
version.workspace = true
edition.workspace = true

[dependencies]
parallel-protocol.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
base64 = "0.22"

axum.workspace = true
tower-http.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true

