[package]
name = "parallel-server"
version.workspace = true
edition.workspace = true

[dependencies]
parallel-common.workspace = true
parallel-message-broker.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true
dashmap.workspace = true
base64 = "0.22"

axum.workspace = true
tower-http.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true

tokio-tungstenite.workspace = true

