[package]
name = "parallel-server"
version.workspace = true
edition.workspace = true

[dependencies]
parallel-common.workspace = true
parallel-message-broker.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true
dashmap.workspace = true
base64 = "0.22"

axum.workspace = true
tower-http.workspace = true
tokio-tungstenite.workspace = true

diesel = { version = "2", features = ["sqlite", "r2d2", "chrono", "uuid", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2", features = ["sqlite"] }
r2d2 = "0.8"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }

