[package]
name = "parallel-worker"
version.workspace = true
edition.workspace = true

[dependencies]
parallel-common.workspace = true
parallel-message-broker.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true

agent-client-protocol.workspace = true
reqwest.workspace = true
which.workspace = true
nix.workspace = true
git2.workspace = true
sha2 = "0.10"
backoff.workspace = true
